# toymaker

./: .gitignore  CMakeLists.txt  CMakePresets.json  Doxyfile  LICENSE.txt  README.md  annotated.html  annotated_dup.js  application_8hpp.html  application_8hpp.js  application_8hpp_source.html  camera__system_8hpp.html  camera__system_8hpp_source.html  classToyMaker_1_1ActionContext-members.html  classToyMaker_1_1ActionContext.html  classToyMaker_1_1ActionContext.js  classToyMaker_1_1ActionDispatch-members.html  classToyMaker_1_1ActionDispatch.html  classToyMaker_1_1ActionDispatch.js  classToyMaker_1_1AdditionRenderStage-members.html  classToyMaker_1_1AdditionRenderStage.html  classToyMaker_1_1AdditionRenderStage.js  classToyMaker_1_1Application-members.html  classToyMaker_1_1Application.html  classToyMaker_1_1Application.js  classToyMaker_1_1Application_1_1getByPath__Helper-members.html  classToyMaker_1_1Application_1_1getByPath__Helper.html  classToyMaker_1_1Application_1_1getByPath__Helper.js  classToyMaker_1_1AxisAlignedBounds-members.html  classToyMaker_1_1AxisAlignedBounds.html  classToyMaker_1_1AxisAlignedBounds.js  classToyMaker_1_1BaseComponentArray-members.html  classToyMaker_1_1BaseComponentArray.html  classToyMaker_1_1BaseComponentArray.js  classToyMaker_1_1BaseConstraint-members.html  classToyMaker_1_1BaseConstraint.html  classToyMaker_1_1BaseConstraint.js  classToyMaker_1_1BaseInstanceAllocator-members.html  classToyMaker_1_1BaseInstanceAllocator.html  classToyMaker_1_1BaseInstanceAllocator.js  (+775 more)
ExampleProject_Basic/: CMakeLists.txt
ExampleProject_Basic/data/: input_bindings.json  root.json
Examples/: CMakeLists.txt
Examples/CenterText/: CMakeLists.txt  spin_on_click.cpp  spin_on_click.hpp
Examples/CenterText/CenterText/: CMakeLists.txt
Examples/CenterText/CenterText/data/: root.json
Examples/CenterText/data/: root.json
Examples/LeftRightCollision/: CMakeLists.txt
Examples/LeftRightCollision/data/: root.json
Examples/ManyLights/: CMakeLists.txt  fly_camera.cpp  scene_setup.cpp
Examples/ManyLights/data/: UrGamePiece.mtl  eagle.json  fly_camera.json  root.json
Examples/SlopeFriction/: CMakeLists.txt  gravity.cpp  pin.cpp
Examples/SlopeFriction/data/: project.json  root.json
ToyMaker_Builtins/: CMakeLists.txt  ToyMakerConfigureExecutable.cmake  toymaker_copy_src_target_data.cmake
ToyMaker_Builtins/data/: ui_button.json
ToyMaker_Builtins/data/shader/: basicFS.json  basicShader.json  basicVS.json  combineFS.json  combineShader.json  gaussianblurFS.json  gaussianblurShader.json  gaussianblurVS.json  geometryFS.json  geometryShader.json  geometryVS.json  lightingFS.json  lightingShader.json  lightingVS.json  nineSliceFS.json  nineSliceShader.json  skyboxFS.json  skyboxShader.json  skyboxVS.json  tonemappingFS.json  tonemappingShader.json  tonemappingVS.json
ToyMaker_Builtins/data/shader/basic/: basic.fs  basic.vs
ToyMaker_Builtins/data/shader/blur/: gaussian.fs  gaussian.vs
ToyMaker_Builtins/data/shader/combine/: combine.fs
ToyMaker_Builtins/data/shader/common/: fragmentAttributes.fs  fragmentAttributes.vs  genericSampler.fs  geometrySampler.fs  lightStruct.fs  lightStruct.vs  lightingSampler.fs  material.fs  modelNormalMatrices.vs  projectionViewMatrices.vs  vertexAttributes.vs
ToyMaker_Builtins/data/shader/geometry/: geometry.fs  geometry.vs
ToyMaker_Builtins/data/shader/lighting/: deferredLighting.fs  deferredLighting.vs  lightStruct.fs  lightStruct.vs
ToyMaker_Builtins/data/shader/nine_slice/: nine_slice.fs
ToyMaker_Builtins/data/shader/simple_tonemapping/: tonemapping.fs  tonemapping.vs
ToyMaker_Builtins/data/shader/skybox/: skybox.fs  skybox.vs
ToyMaker_Builtins/include/toymaker/builtins/: interface_pointer_callback.hpp  nine_slice_panel.hpp  query_click.hpp  render_debug_viewer.hpp  ui_button.hpp  ui_image.hpp  ui_panel.hpp  ui_text.hpp
ToyMaker_Builtins/src/: nine_slice_panel.cpp  query_click.cpp  render_debug_viewer.cpp  ui_button.cpp  ui_image.cpp  ui_panel.cpp  ui_text.cpp
ToyMaker_Main/: CMakeLists.txt  main.cpp
ToyMaker_Main/include/toymaker/engine/: application.hpp  camera_system.hpp  framebuffer.hpp  instance.hpp  light.hpp  material.hpp  mesh.hpp  model.hpp  registrator.hpp  render_stage.hpp  render_system.hpp  scene_components.hpp  scene_loading.hpp  scene_system.hpp  shader_program.hpp  shapegen.hpp  signals.hpp  sim_system.hpp  spatial_query_basic_types.hpp  spatial_query_math.hpp  spatial_query_octree.hpp  spatial_query_system.hpp  text_render.hpp  texture.hpp  toymaker_namespace.hpp  util.hpp  vertex.hpp  window_context_manager.hpp
ToyMaker_Main/include/toymaker/engine/core/: ecs_world.hpp  ecs_world_resource_ext.hpp  resource_database.hpp
ToyMaker_Main/include/toymaker/engine/input_system/: input_data.hpp  input_system.hpp
ToyMaker_Main/include/toymaker/engine/physics/: system.hpp  types.hpp
ToyMaker_Main/include/toymaker/engine/spatial_query/: basic_types.hpp  math.hpp  octree.hpp  sweep_prune.hpp  system.hpp  types.hpp
ToyMaker_Main/src/: application.cpp  camera_system.cpp  framebuffer.cpp  instance.cpp  light.cpp  material.cpp  mesh.cpp  model.cpp  render_stage.cpp  render_system.cpp  scene_components.cpp  scene_loading.cpp  scene_system.cpp  shader_program.cpp  shapegen.cpp  signals.cpp  sim_system.cpp  spatial_query_math.cpp  spatial_query_octree.cpp  spatial_query_system.cpp  text_render.cpp  texture.cpp  util.cpp  window_context_manager.cpp
ToyMaker_Main/src/core/: ecs_world.cpp  resource_database.cpp
ToyMaker_Main/src/input_system/: action_context.cpp  input_manager.cpp
ToyMaker_Main/src/physics/: system.cpp  types.cpp
ToyMaker_Main/src/spatial_query/: math.cpp  octree.cpp  sweep_prune.cpp  system.cpp  types.cpp
cmake/: ToyMakerConfig.cmake.in
docs/: mainpage.dox
search/: all_0.js  all_10.js  all_11.js  all_12.js  (+153 more)
tests/: CMakeLists.txt  string_conversions.hpp
tests/ToyMaker_Main/: CMakeLists.txt  spatial_query_math.cpp
tests/ToyMaker_Main/physics/: constraints.cpp
tests/ToyMaker_Main/spatial_query/: aabb.cpp  object_overlaps.cpp  octree.cpp  ray_intersections.cpp
(+13 files in other folders)
